Small UI improvments for clocking history

--- a/src/main/webapp/clocking.xhtml
+++ b/src/main/webapp/clocking.xhtml
@@ -14,7 +14,7 @@
 
 <h:body>
 	<ui:include src="/template/header.xhtml" />
-	
+
 	<h:form id="topForm">
 		<p:messages id="msgs" showDetail="true" closable="true">
 			<p:autoUpdate />
@@ -27,7 +27,7 @@
 					<p:outputLabel value="Local date time: " />
 				</div>
 				<div class="ui-g-12">
-					<p:clock id="clock" pattern="dd-MM-yyyy HH:mm:ss" mode="server" />
+					<p:clock id="clock" pattern="dd.MM.yyyy HH:mm:ss" mode="server" />
 				</div>
 			</div>
 
