Last UI improvments and refactoring

--- a/src/main/webapp/clocking.xhtml
+++ b/src/main/webapp/clocking.xhtml
@@ -16,7 +16,8 @@
 	<ui:include src="/template/header.xhtml" />
 
 	<h:form id="topForm">
-		<p:messages id="msgs" showDetail="true" closable="true">
+		<p:messages id="msgs" class="messages" showDetail="true"
+			closable="true">
 			<p:autoUpdate />
 		</p:messages>
 		<p:panel class="clocking-panel">
